--- a/templates/components/home.html
+++ b/templates/components/home.html
@@ -79,10 +79,6 @@
 
     <!-- MODAL DE VERSIÓN Y NOVEDADES -->
     {% if user.is_authenticated %}
-    <button data-modal-target="versionModal" data-modal-toggle="versionModal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-    type="button">
-        Toggle modal
-    </button>
 
     <!-- Main modal -->
     <div id="versionModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 flex items-center justify-center">
@@ -139,7 +135,7 @@
         </div>
     </div>
 
-    {% comment %} <script>
+    <script>
         document.addEventListener('DOMContentLoaded', () => {
             const versionModal = document.getElementById('versionModal');
             const closeVersionModalButtons = document.querySelectorAll('[data-modal-hide="versionModal"]');
@@ -161,9 +157,9 @@
                 });
             });
         });
-    </script> {% endcomment %}
+    </script>
 
-    <script>
+    {% comment %} <script>
         document.addEventListener('DOMContentLoaded', () => {
             const versionModal = document.getElementById('versionModal');
             const closeVersionModalButtons = document.querySelectorAll('[data-modal-hide="versionModal"]');
@@ -189,7 +185,7 @@
                 });
             });
         });
-    </script>
+    </script> {% endcomment %}
     {% endif %}
     <!-- FIN DEL MODAL DE VERSIÓN Y NOVEDADES -->
 
@@ -632,15 +628,15 @@
 
                 <!-- Módulo de Incremento de precios -->
                 <div class="flex justify-center items-center mt-6">
-                    <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-red-600 dark:hover:bg-red-700">
+                    <div class="group relative w-full bg-gray-100 dark:bg-gray-800 rounded-2xl p-4 transition-all duration-500 max-md:max-w-md max-md:mx-auto hover:bg-yellow-600 dark:hover:bg-yellow-700">
                         <div class="bg-white dark:bg-gray-700 rounded-full flex justify-center items-center mb-5 w-14 h-14">
-                            <i class="ri-shield-user-fill text-2xl text-red-500 dark:text-red-400"></i>
+                            <i class="fa-solid fa-coins text-2xl text-yellow-500 dark:text-yellow-400"></i>
                         </div>
                         <h4 class="text-xl font-semibold text-gray-900 dark:text-white mb-3 capitalize transition-all duration-500 group-hover:text-white">{% trans 'Incremento de precios' %}</h4>
                         <p class="text-sm font-normal text-gray-500 dark:text-gray-400 transition-all duration-500 leading-5 group-hover:text-white">
                             {% trans 'Gestiona el incremento de precios de tus productos.' %}
                         </p>
-                        <a href="{% url 'core:product_price_list' %}" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-red-500 rounded-lg hover:bg-red-600 focus:ring-4 focus:ring-red-300 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
+                        <a href="{% url 'core:product_price_list' %}" class="mt-4 inline-flex items-center justify-center px-5 py-2 text-sm font-medium text-white bg-yellow-500 rounded-lg hover:bg-yellow-600 focus:ring-4 focus:ring-yellow-300 dark:bg-yellow-600 dark:hover:bg-yellow-700 dark:focus:ring-yellow-800">
                             {% trans 'Empezar' %}
                         </a>
                     </div>
