--- a/templates/core/product_prices/form.html
+++ b/templates/core/product_prices/form.html
@@ -1,41 +1,49 @@
-FORM{% extends 'components/base.html' %}
+{% extends 'components/base.html' %}
 {% block content %}
 {% load static %}
-
 <title>{% block title %} {{ title }} {% endblock title %}</title>
-
 <section class="dark:bg-principal py-20">
     <div class="container mx-auto p-4" data-aos="fade-up" data-aos-delay="300">
         <!-- Cinta de navegación -->
-        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700"
+            aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
                 <li class="inline-flex items-center">
-                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                            <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
+                    <a href="/"
+                        class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                            fill="currentColor" viewBox="0 0 20 20">
+                            <path
+                                d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
                         </svg>
                         Home
                     </a>
                 </li>
                 <li>
                     <div class="flex items-center">
-                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 9 4-4-4-4" />
                         </svg>
-                        <a href="{% url 'core:product_price_list' %}" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Consulta de Precios de Productos</a>
+                        <a href="{% url 'core:product_price_list' %}"
+                            class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Precios de Productos</a>
                     </div>
                 </li>
-                <li aria-current="page">
+                <li>
                     <div class="flex items-center">
-                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 9 4-4-4-4" />
                         </svg>
-                        <span class="ms-1 text-sm font-medium text-blue-700 md:ms-2 dark:text-blue-600">Actualizar Precios de Productos</span>
+                        <a href="{% url 'core:product_price_create' %}"
+                            class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Precios de Productos</a>
                     </div>
                 </li>
             </ol>
         </nav>
-        
+        <br>
         <div class="sm:pt-28 lg:pt-4">
             <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
                 {{ title }}
@@ -52,7 +60,7 @@ FORM{% extends 'components/base.html' %}
                     <div class="grid grid-cols-3 gap-6 items-center justify-center text-center space-y-2">
                         <div class="">
                             <label for="{{ form.product.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.product.label }}</label>
-                            <select name="{{ form.product.name }}" id="{{ form.product.id_for_label }}" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" required>
+                            <select name="{{ form.product.name }}" id="{{ form.product.id_for_label }}" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                                 <option value="" disabled selected>Seleccione un producto</option>
                                 {% for product in form.product.field.queryset %}
                                 <option value="{{ product.id }}" data-line="{{ product.line.id }}" data-price="{{ product.price }}" data-category="{{ product.get_categories }}">{{ product.description }}</option>
@@ -114,10 +122,12 @@ FORM{% extends 'components/base.html' %}
                                     <th scope="col" class="px-6 py-3">Acciones</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody class="bg-white dark:bg-gray-800 dark:text-gray-200">
+                                <tr class="dark:text-gray-400 bg-white border-b dark:bg-[#0b1121] dark:border-secundario hover:bg-gray-50 dark:hover:bg-[#121c33]">
+                                </tr>
                             </tbody>
                         </table>
-                </div>
+                    </div>
                 <!-- Botones de acción -->
                 <div class="flex justify-center mt-6 space-x-2">
                     <button type="submit" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full">
